--- a/src/app/view/shared/components/header/header.component.html
+++ b/src/app/view/shared/components/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<div class="header">
+    <div class="wrapper">  
+        <div class = 'logo'>
+            <a href = #>
+                <img src = '../../../../../assets/Screenshot.png' >
+            </a> 
+        </div>
+        <div class = "navigation">
+            <ul>
+                <li><a href = #>Бокс</a></li>
+                <li><a href = #>Бокс</a></li>
+                <li><a href = #>Бокс</a></li>
+                <li><a href = #>Бокс</a></li>            
+            </ul>
+        </div>   
+    </div>
+</div>
