--- a/src/app/view/shared/components/header/header.component.html
+++ b/src/app/view/shared/components/header/header.component.html
@@ -6,12 +6,19 @@
             </a> 
         </div>
         <div class = "navigation">
-            <ul>
+            <ul class = 'nav-items'>
                 <li><a href = #>Бокс</a></li>
                 <li><a href = #>Бокс</a></li>
                 <li><a href = #>Бокс</a></li>
                 <li><a href = #>Бокс</a></li>            
+                <li><a href = #>Бокс</a></li>            
+                <li><a href = #>Бокс</a></li>            
+                <li><a href = #>Бокс</a></li>            
+                <li><a href = #>Бокс</a></li>            
+                <li><a href = #>Бокс</a></li>            
             </ul>
         </div>   
     </div>
+    <app-subheader></app-subheader>
 </div>
+
