--- a/src/app/view/shared/components/header/header.component.html
+++ b/src/app/view/shared/components/header/header.component.html
@@ -7,8 +7,16 @@
         </div>
         <div class = "navigation">
             <ul class = 'nav-items'>
-                <li><a href = #>Бокс</a></li>
-                <li><a href = #>Бокс</a></li>
+                <li class = "list">
+                    <a class = 'first-el' href = # (click) = hide()>Бокс</a>
+                    <div class = 'dropdown-items' *ngIf = "shown" >
+                        <div class = 'el-wrapper'>
+                            <a href = '#' class = "here">Трасляции бокс</a>
+                            <a href = '#' class = "here">Публикации</a>
+                        </div>    
+                    </div>
+                </li>
+                <li><a href = "#" >Бокс</a></li>
                 <li><a href = #>Бокс</a></li>
                 <li><a href = #>Бокс</a></li>            
                 <li><a href = #>Бокс</a></li>            
