--- a/src/app/view/shared/components/header/header.component.html
+++ b/src/app/view/shared/components/header/header.component.html
@@ -8,7 +8,7 @@
         <div class = "navigation">
             <ul class = 'nav-items'>
                 <li class = "list">
-                    <a class = 'first-el' href = # (click) = hide()>Бокс</a>
+                    <a class = 'first-el' href = # >Бокс</a>
                     <div class = 'dropdown-items' *ngIf = "shown" >
                         <div class = 'el-wrapper'>
                             <a href = '#' class = "here">Трасляции бокс</a>
