--- a/src/app/view/shared/components/subheader/subheader.component.html
+++ b/src/app/view/shared/components/subheader/subheader.component.html
@@ -1,17 +1,30 @@
 <div class = "subheader">
-    <div class = 'subheader-wrapper'>
-        <div class = "left-side">
-            <a href = #>+</a>
-            <p>O</p>
-            <p>Что нового?</p>
-        </div>
-        <div class = "right-side">
-            <div class = content>
+    <div class = 'main'> 
+        <div class = 'subheader-wrapper'>
+            <div class = "left-side">
+                <a href = #>+</a>
+                <p>O</p>
+                <p>Что нового?</p>
+            </div>
+            <div class = "right-side">
                 <div class = "left-content">
-
+                   <span>Инста</span>
+                   <span>Инста</span>
+                   <span>Инста</span>
                 </div>
                 <div class = 'right-content'>
-
+                    <div class = 'wrapper'>
+                        <a>
+                                <img src = '#'>
+                        </a>
+                        <div class = 'login'>
+                                <a href = '#'><img src = '#'>Логин</a>
+                        </div>
+                            
+                        <div class = 'registration'> 
+                                <a href = '#'><img src = '#'>Регистрация</a>
+                        </div> 
+                    </div>
                 </div>
             </div>
         </div>
